syntax = "proto3";

option csharp_namespace = "Branchs.Grpc.Protos";

service BranchProtoService {
	rpc GetBranch (GetBranchRequest) return (BranchModel);
	rpc GetOneBranchByName (GetOneBranchByNameRequest) return (BranchModel);
}

message GetBranchRequest {
	int id = 1;
}

message GetOneBranchByNameRequest {
	string name = 1;
}

message BranchModel {
	int32 idbranch =1;
	int32 code =2;
	string region =3;
	string name =4;
	string specialisation=5;
	string email=6;
	string address=7;
	string manager=8;
	string manager_net=9;
	string phone=10;
	string fax=11;
	string status=12;
}

